--- a/BlogSite/BlogSite.csproj
+++ b/BlogSite/BlogSite.csproj
@@ -327,6 +327,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TagController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -391,6 +392,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\ListJournalWidget.cshtml" />
     <Content Include="Views\Category\CategoryWidget.cshtml" />
+    <Content Include="Views\Tag\TagWidget.cshtml" />
+    <Content Include="Views\Home\AboutSite.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
